#weidev#更新工程配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,35 @@
 buildscript {
     repositories {
+        flatDir {
+            dirs 'libs'
+        }
+        mavenLocal()
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.3'
     }
 }
 apply plugin: 'com.android.application'
 
 repositories {
+    flatDir {
+        dirs 'libs'
+    }
+    mavenLocal()
+    google()
     jcenter()
 }
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion versions.compileSdk
+    buildToolsVersion versions.buildTools
 
     defaultConfig {
         applicationId "com.dd.sample"
-        minSdkVersion 14
-        targetSdkVersion 21
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
         versionCode Integer.parseInt(project.VERSION_CODE)
         versionName project.VERSION_NAME
     }
@@ -32,8 +42,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile project(':library')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    compile 'com.android.support:appcompat-v7:21.0.3'
+    implementation deps.support.appCompat
+    implementation project(':library')
 //    compile 'com.github.dmytrodanylyk.shadow-layout:library:1.0.0-SNAPSHOT@aar'
 }
