--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,15 @@
 
 buildscript {
     repositories {
+        flatDir {
+            dirs 'libs'
+        }
+        mavenLocal()
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,7 +22,13 @@ allprojects {
     group = GROUP
 
     repositories {
+        flatDir {
+            dirs 'libs'
+        }
+        mavenLocal()
+        google()
         jcenter()
+
         maven {
             url "https://oss.sonatype.org/content/repositories/snapshots/"
         }
@@ -28,4 +39,175 @@ def isReleaseBuild() {
     return version.contains("SNAPSHOT") == false
 }
 
-apply plugin: 'android-reporting'
+//apply plugin: 'android-reporting'
+
+// Define versions in a single place
+// 在一个地方定义所有工具的版本号
+ext.versions = [
+        // Sdk and tools
+        'compileSdk'               : 27,
+        'buildTools'               : '27.0.3',
+        'minSdk'                   : 14,
+        'targetSdk'                : 27,
+
+        'supportLibrary'           : '27.1.1',
+        'supportTestLibraryVersion': '0.5',
+        'constraint'               : '1.0.2',
+        'dagger'                   : '1.2.5',
+        'okhttp'                   : '3.8.1',
+        'retrofit'                 : '2.3.0',
+        'rxJava'                   : '2.1.0',
+        'rxAndroid'                : '2.0.1',
+        'rxbinding'                : '2.0.0',
+
+        'butterKnife'              : '8.8.1',
+        'leakCanary'               : '1.5.1',
+        'espresso'                 : '2.2.2',
+        'astl'                     : '0.5',
+        'errorProne'               : '2.1.1',
+        'stetho'                   : '1.5.0',
+
+        //    junitVersion = '4.12'
+//    mockitoVersion = '1.10.19'
+//    powerMockito = '1.6.5'
+//    hamcrestVersion = '1.3'
+//    runnerVersion = '0.4.1'
+//    rulesVersion = '0.4.1'
+//    espressoVersion = '2.2.1'
+        'junit'                    : '4.12',
+        'mockito'                  : '1.10.19',
+        'powerMockito'             : '1.6.5',
+        'uiautomator'              : '2.1.2',
+
+        'svnRevision'              : '0',
+
+//    tinyDancerVersion       ="0.0.9"
+//    lynxVersion             ="1.6"
+//    processPhoenixVersion   ="1.0.2"
+//    blockcanaryVersion      ="1.5.0"
+        'tinydancer'               : '0.0.9',
+        'lynx'                     : '1.6',
+        'processPhoenix'           : '1.0.2',
+        'blockCanary'              : '1.5.0',
+
+]
+
+ext.deps = [
+        'support'                : [
+                'annotations'  : "com.android.support:support-annotations:${versions.supportLibrary}",
+                'v4'           : "com.android.support:support-v4:${versions.supportLibrary}",
+                'appCompat'    : "com.android.support:appcompat-v7:${versions.supportLibrary}",
+                'v13'          : "com.android.support:support-v13:${versions.supportLibrary}",
+                'cardView'     : "com.android.support:cardview-v7:${versions.supportLibrary}",
+                'design'       : "com.android.support:design:${versions.supportLibrary}",
+                'recyclerView' : "com.android.support:recyclerview-v7:${versions.supportLibrary}",
+                'percent'      : "com.android.support:percent:${versions.supportLibrary}",
+                'exifinterface': "com.android.support:exifinterface:${versions.supportLibrary}",
+
+
+                'constraint'   : "com.android.support.constraint:constraint-layout:${versions.constraint}",
+
+                'test'         : [
+                        'runner'     : "com.android.support.test:runner:${versions.supportTestLibraryVersion}",
+                        'rules'      : "com.android.support.test:rules:${versions.supportTestLibraryVersion}",
+                        'uiautomator': "com.android.support.test.uiautomator:uiautomator-v18:${versions.uiautomator}",
+                ]
+        ],
+        'retrofit'               : [
+                'core'   : "com.squareup.retrofit2:retrofit:${versions.retrofit}",
+                'gson'   : "com.squareup.retrofit2:converter-gson:${versions.retrofit}",
+                'mock'   : "com.squareup.retrofit2:retrofit-mock:${versions.retrofit}",
+                'moshi'  : "com.squareup.retrofit2:converter-moshi:${versions.retrofit}",
+//                "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
+                'adapter': "com.squareup.retrofit2:adapter-rxjava2:${versions.retrofit}",
+        ],
+        'rx'                     : [
+                'core'       : "io.reactivex.rxjava2:rxjava:${versions.rxJava}",
+                'android'    : "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}",
+                'preferences': 'com.f2prateek.rx.preferences:rx-preferences:1.0.2',
+        ],
+
+        'rxbinding'              : [
+                'core'        : "com.jakewharton.rxbinding2:rxbinding:${versions.rxbinding}",
+                'v4'          : "com.jakewharton.rxbinding2:rxbinding-support-v4:${versions.rxbinding}",
+                'v7'          : "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:${versions.rxbinding}",
+                'recyclerview': "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:${versions.rxbinding}",
+                'design'      : "com.jakewharton.rxbinding2:rxbinding-design:${versions.rxbinding}",
+
+//                api "com.jakewharton.rxbinding2:rxbinding:$rootProject.rxbindingVersion"
+//                api "com.jakewharton.rxbinding2:rxbinding-support-v4:$rootProject.rxbindingVersion"
+//                api "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rootProject.rxbindingVersion"
+//                api "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:$rootProject.rxbindingVersion"
+//                api "com.jakewharton.rxbinding2:rxbinding-design:$rootProject.rxbindingVersion"
+        ],
+
+        'dagger'                 : [
+                'runtime' : "com.squareup.dagger:dagger:${versions.dagger}",
+                'compiler': "com.squareup.dagger:dagger-compiler:${versions.dagger}",
+        ],
+        'okhttp'                 : [
+                'core'         : "com.squareup.okhttp3:okhttp:${versions.okhttp}",
+                'urlconnection': "com.squareup.okhttp3:okhttp-urlconnection:${versions.okhttp}",
+                'logger'       : "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}",
+        ],
+        'okio'                   : 'com.squareup.okio:okio:1.13.0',
+        'picasso'                : 'com.squareup.picasso:picasso:2.5.2',
+        'picassoOkHttpDownloader': 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0',
+
+        //stetho调试工具
+//        api 'com.facebook.stetho:stetho:1.5.0'
+//        api 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+        'stetho'                 : [
+                'core'  : "com.facebook.stetho:stetho:${versions.stetho}",
+                'okhttp': "com.facebook.stetho:stetho-okhttp3:${versions.stetho}",
+                'js'    : "com.facebook.stetho:stetho-js-rhino:${versions.stetho}"
+        ],
+        'moshi'                  : 'com.squareup.moshi:moshi:1.5.0',
+        'butterKnife'            : [
+                'runtime' : "com.jakewharton:butterknife:${versions.butterKnife}",
+                'compiler': "com.jakewharton:butterknife-compiler:${versions.butterKnife}",
+        ],
+        'timber'                 : 'com.jakewharton.timber:timber:4.5.1',
+        'byteUnits'              : 'com.jakewharton.byteunits:byteunits:0.9.1',
+
+        'madge'                  : 'com.jakewharton.madge:madge:1.1.4',
+        'scalpel'                : 'com.jakewharton.scalpel:scalpel:1.1.2',
+        'leakCanary'             : [
+                'real': "com.squareup.leakcanary:leakcanary-android:${versions.leakCanary}",
+                'noOp': "com.squareup.leakcanary:leakcanary-android-no-op:${versions.leakCanary}",
+        ],
+        'threeTenAbp'            : 'com.jakewharton.threetenabp:threetenabp:1.0.5',
+        'telescope'              : 'com.mattprecious.telescope:telescope:2.1.0',
+
+
+        'mockito'                : "org.mockito:mockito-core:${versions.mockito}",
+        'junit'                  : "junit:junit:${versions.junit}",
+        'powermock'              : [
+                'junit'  : "org.powermock:powermock-module-junit4:${versions.powerMockito}",
+                'rule'   : "org.powermock:powermock-module-junit4-rule:${versions.powerMockito}",
+                'mockito': "org.powermock:powermock-api-mockito:${versions.powerMockito}",
+        ],
+
+        'espresso'               : [
+                'core'   : "com.android.support.test.espresso:espresso-core:${versions.espresso}",
+                'contrib': "com.android.support.test.espresso:espresso-contrib:${versions.espresso}",
+        ],
+        'astl'                   : [
+                'runner': "com.android.support.test:runner:${versions.astl}",
+                'rules' : "com.android.support.test:rules:${versions.astl}",
+        ],
+        'spoon'                  : 'com.squareup.spoon:spoon-client:1.7.1',
+        'truth'                  : 'com.google.truth:truth:0.34',
+        'errorProneAnnotations'  : "com.google.errorprone:error_prone_annotations:${versions.errorProne}",
+
+//        "com.github.brianPlummer:tinydancer:$rootProject.tinyDancerVersion"
+        'tinydancer'             : "com.github.brianPlummer:tinydancer:${versions.tinydancer}",
+//        "com.github.pedrovgs:lynx:$rootProject.lynxVersion"
+        'lynx'                   : "com.github.pedrovgs:lynx:${versions.lynx}",
+        //        'processPhoenix'         : 'com.jakewharton:process-phoenix:2.0.0',
+//        "com.jakewharton:process-phoenix:$rootProject.processPhoenixVersion"
+
+        'processPhoenix'         : "com.jakewharton:process-phoenix:${versions.processPhoenix}",
+//        "com.github.markzhai:blockcanary-android:$rootProject.blockcanaryVersion"
+        'blockCanary'            : "com.github.markzhai:blockcanary-android:${versions.blockCanary}",
+]
